--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "typescript-api-skeleton",
-  "version": "1.0.0",
+  "name": "mediapp_backend",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --verbose"
   },
-  "author": "",
+  "author": "Rodrigo Regadío Núñez",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -23,13 +23,15 @@
     "eslint-plugin-jest": "^26.1.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "sequelize": "^6.31.0",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "typeorm": "^0.3.15"
   }
 }
