--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,12 +3,14 @@
       "module": "commonjs",
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
-      "target": "es6",
+      "target": "ES2022",
       "strict": true,
       "moduleResolution": "node",
       "sourceMap": true,
       "outDir": "dist",
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "experimentalDecorators": true,
+      "strictPropertyInitialization": false
     },
     "include": [
       "src/**/*",
