--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.17",
+    "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.11",
     "eslint": "^8.33.0",
     "eslint-config-codely": "^2.1.3",
@@ -32,6 +32,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-mapstruct": "^3.1.1",
     "typeorm": "^0.3.15"
   }
 }
