--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,7 @@
       "sourceMap": true,
       "outDir": "dist",
       "resolveJsonModule": true,
+      "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "strictPropertyInitialization": false
     },
